[gd_scene load_steps=20 format=4 uid="uid://cqhykhx23v1su"]

[ext_resource type="Script" uid="uid://c62jkv65meuxr" path="res://scenes/levels/house.gd" id="1_g6yoe"]
[ext_resource type="TileSet" uid="uid://cw45kfg2c8mfk" path="res://premade/HouseTileSet.tres" id="1_mfwd8"]
[ext_resource type="Texture2D" uid="uid://dpvg3yddudamn" path="res://graphics/tilesets/walls_floor_tile.png" id="2_bbbus"]
[ext_resource type="Texture2D" uid="uid://cwbhys0nypuq" path="res://graphics/tilesets/roof.png" id="4_jfia5"]
[ext_resource type="PackedScene" uid="uid://dxxa2cdh5ipd1" path="res://scenes/levels/tv.tscn" id="5_ap60n"]
[ext_resource type="PackedScene" uid="uid://b8llmw8weehkr" path="res://scenes/levels/bed.tscn" id="6_4yql1"]
[ext_resource type="Texture2D" uid="uid://c6gdvovhpj0oj" path="res://graphics/objects/plant.png" id="7_dc68u"]
[ext_resource type="Texture2D" uid="uid://dvaxmp1m08kte" path="res://graphics/objects/carpet.png" id="8_e6eqm"]
[ext_resource type="Texture2D" uid="uid://baujryqqid5kt" path="res://graphics/objects/bookshelf.png" id="9_ctgqc"]
[ext_resource type="Texture2D" uid="uid://pj3opopm7pns" path="res://graphics/objects/night stand.png" id="10_op4as"]
[ext_resource type="Texture2D" uid="uid://b1eeactik3oq3" path="res://graphics/objects/table.png" id="11_wryub"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jfia5"]
texture = ExtResource("2_bbbus")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ap60n"]
sources/0 = SubResource("TileSetAtlasSource_jfia5")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ap60n"]
texture = ExtResource("4_jfia5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSet" id="TileSet_4yql1"]
sources/0 = SubResource("TileSetAtlasSource_ap60n")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6eqm"]
size = Vector2(6, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ar8a6"]
size = Vector2(28, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xg87n"]
size = Vector2(10, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbbkb"]
size = Vector2(24, 14)

[node name="House" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_g6yoe")

[node name="FloorLayer" type="TileMapLayer" parent="."]
z_index = -2
tile_set = SubResource("TileSet_ap60n")

[node name="WallsLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAIAAAACAAIAAAAAAAEAAAACAAEAAAAAAAAAAAACAAEAAAAAAP//AAACAAAAAAD//wIAAAABAAIAAAD//wEAAAABAAEAAAD//wAAAAABAAEAAAD/////AAABAAAAAAD+/wIAAAABAAIAAAD+/wEAAAABAAEAAAD+/wAAAAABAAEAAAD+////AAABAAAAAAD9/wIAAAAAAAQAAAD9/wEAAAABAAEAAAD9/wAAAAABAAEAAAD9////AAABAAAAAAD8/wIAAAABAAIAAAD8/wEAAAABAAEAAAD8/wAAAAABAAEAAAD8////AAABAAAAAAD7/wIAAAABAAIAAAD7/wEAAAABAAEAAAD7/wAAAAABAAEAAAD7////AAABAAAAAAD6/wIAAAAAAAIAAAD6/wEAAAAAAAEAAAD6/wAAAAAAAAEAAAD6////AAAAAAAAAAA=")
tile_set = ExtResource("1_mfwd8")

[node name="RoofLayer" type="TileMapLayer" parent="."]
z_index = 2
tile_map_data = PackedByteArray("AAD6/wIAAAAAAAUAAAD7/wIAAAABAAUAAAD8/wIAAAABAAUAAAD9/wIAAAABAAUAAAD+/wIAAAABAAUAAAD//wIAAAABAAUAAAAAAAIAAAACAAUAAAD6/wEAAAAAAAQAAAD6/wAAAAAAAAQAAAD7/wAAAAABAAQAAAD8/wAAAAABAAQAAAD9/wAAAAABAAQAAAD+/wAAAAABAAQAAAD//wAAAAABAAQAAAAAAAAAAAACAAQAAAAAAAEAAAACAAQAAAD//wEAAAABAAQAAAD+/wEAAAABAAQAAAD9/wEAAAABAAQAAAD8/wEAAAABAAQAAAD7/wEAAAABAAQAAAD6//7/AAAAAAAAAAAAAP7/AAACAAAAAAD///7/AAABAAAAAAD+//7/AAABAAAAAAD9//7/AAABAAAAAAD8//7/AAABAAAAAAD7//7/AAABAAAAAAD6////AAAAAAIAAAAAAP//AAACAAIAAAD7////AAABAAIAAAD8////AAABAAIAAAD9////AAABAAIAAAD+////AAABAAIAAAD/////AAABAAIAAAA=")
tile_set = SubResource("TileSet_4yql1")

[node name="HouseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseArea"]
polygon = PackedVector2Array(-93, 42, -92, -10, 12, -10, 12, 43, -32, 43, -32, 55, -48, 55, -48, 43)

[node name="TV" parent="." instance=ExtResource("5_ap60n")]
position = Vector2(-62, -1)

[node name="Bed" parent="." instance=ExtResource("6_4yql1")]
position = Vector2(-4, 22)

[node name="Plant" type="StaticBody2D" parent="."]
position = Vector2(-84, 0)
metadata/_edit_group_ = true

[node name="Plant" type="Sprite2D" parent="Plant"]
texture = ExtResource("7_dc68u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plant"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_e6eqm")

[node name="Plant2" type="StaticBody2D" parent="."]
position = Vector2(3, -4)
metadata/_edit_group_ = true

[node name="Plant" type="Sprite2D" parent="Plant2"]
texture = ExtResource("7_dc68u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plant2"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_e6eqm")

[node name="Carpet" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-5, 23)
texture = ExtResource("8_e6eqm")

[node name="Bookshelf" type="StaticBody2D" parent="."]
position = Vector2(-37, -3)
metadata/_edit_group_ = true

[node name="Bookshelf" type="Sprite2D" parent="Bookshelf"]
texture = ExtResource("9_ctgqc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bookshelf"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ar8a6")

[node name="NightStand" type="StaticBody2D" parent="."]
position = Vector2(-19, 11)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NightStand"]
texture = ExtResource("10_op4as")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NightStand"]
shape = SubResource("RectangleShape2D_xg87n")

[node name="Table" type="StaticBody2D" parent="."]
position = Vector2(-75, 28)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Table"]
texture = ExtResource("11_wryub")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table"]
shape = SubResource("RectangleShape2D_dbbkb")

[connection signal="body_entered" from="HouseArea" to="." method="_on_house_area_body_entered"]
[connection signal="body_exited" from="HouseArea" to="." method="_on_house_area_body_exited"]
